<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">

    <data>
        <variable
            name="viewModel"
            type="kz.almaty.satbayevuniversity.AuthViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/loginHeaderImg"
            android:src="@drawable/header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.01"
            app:layout_constraintHeight_percent="0.1"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/graduationImg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/graduation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginHeaderImg"
            app:layout_constraintHeight_percent="0.23" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewLogin"
            android:layout_width="0dp"
            android:layout_height="160dp"
            app:layout_constraintTop_toBottomOf="@+id/graduationImg"
            app:layout_constraintBottom_toTopOf="@+id/loginBtn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:cardElevation="22dp"
            app:cardCornerRadius="4dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintWidth_percent="0.9">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cardViewLoginConstraint">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvHello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/login_hello"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/LoginConstraint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvHello"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:background="@drawable/etborder"
                    android:padding="7dp"
                    app:layout_constraintWidth_percent="0.9"
                    app:layout_constraintVertical_bias="0.2">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgLogin"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/id_icon_blue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/etLogin"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etLogin"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:background="@null"
                        android:fontFamily="@font/open_sans_light"
                        android:hint="@string/et_login_hint"
                        android:inputType="number"
                        android:paddingStart="12dp"
                        android:text="@={viewModel.username}"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imgLogin"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/PasswordConstraint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/LoginConstraint"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:background="@drawable/etborder"
                    android:padding="7dp"
                    app:layout_constraintWidth_percent="0.9">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgPassword"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/password_icon_blue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/etPassword"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etPassword"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:inputType="textPassword"
                        android:background="@null"
                        android:fontFamily="@font/open_sans_light"
                        android:hint="@string/et_password_hint"
                        android:paddingStart="12dp"
                        android:textSize="15sp"
                        android:text="@={viewModel.password}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imgPassword"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBeta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    app:layout_constraintEnd_toEndOf="@+id/PasswordConstraint"
                    android:textColor="@color/colorBntLogin"
                    android:gravity="end"
                    android:text="@string/beta_version"
                    app:layout_constraintTop_toBottomOf="@+id/PasswordConstraint"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/bound"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/btn_login"
            android:textColor="@color/colorWhite"
            app:spinning_bar_width="3dp"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_color="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/cardViewLogin"
            app:layout_constraintBottom_toTopOf="@+id/rocket"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintWidth_percent="0.9"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/rocket"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/rocket"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHeight_percent="0.23"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>